# Image_watermark_removal_tool

./: .gitignore  ALGORITHM_IMPROVEMENTS.md  ENHANCED_FEATURES.md  ENHANCEMENT_SUMMARY.md  PROJECT_SUMMARY.md  PYSIDE6.md  QUICKSTART.md  README.md  TEST_REPORT.md  USAGE.md  VERSION_COMPARISON.md  create_test_image.py  pyproject.toml  run.py  run_enhanced.py  test_algorithm_comparison.py  test_basic.py  test_enhanced.py  test_functionality.py
docs/plans/: 2026-01-22-lama-implementation-plan.md  2026-01-22-lama-integration-design.md
src/watermark_remover/: __init__.py  exceptions.py  gui.py  gui_enhanced.py  image_processor.py  lama_inpainter.py  main.py  model_manager.py
tests/: test_image_processor_lama.py  test_lama_inpainter.py  test_model_manager.py
